--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="https://qbittorrent-ecosystem.github.io/qb-webui-api-openapi">
+    <a href="https://qbittorrent-ecosystem.github.io/webui-api-openapi">
         <div id="openapi">
             <img src="./icons/openapi.svg" alt="OpenAPI icon">
             <p class="title">OpenAPI specification</p>
